@@ -66,10 +66,10 @@ install/squid3::
 	mv $(INSTALLDIR)/usr/share/man/man8/cachemgr.cgi.8 $(INSTALLDIR)/usr/share/man/man8/cachemgr3.cgi.8
 	install -m 755 -g root -d $(INSTALLDIR)/etc/init.d
 	install -m 755 -g root -d $(INSTALLDIR)/etc/logrotate.d
-	install -m 755 -g root -d $(INSTALLDIR)/etc/resolvconf.d
-	install -m 755 -g root -d $(INSTALLDIR)/etc/resolvconf.d/update-libc.d
+	install -m 755 -g root -d $(INSTALLDIR)/etc/resolvconf
+	install -m 755 -g root -d $(INSTALLDIR)/etc/resolvconf/update-libc.d
 	install -m 755 -g root debian/squid3.rc $(INSTALLDIR)/etc/init.d/squid3
-	install -m 755 -g root debian/squid3.resolvconf $(INSTALLDIR)/etc/resolvconf.d/update-libc.d/squid3
+	install -m 755 -g root debian/squid3.resolvconf $(INSTALLDIR)/etc/resolvconf/update-libc.d/squid3
 	install -m 644 -g root debian/squid3.logrotate $(INSTALLDIR)/etc/logrotate.d/squid3
 	install -m 755 -g root -d debian/squid3/var/log
 	install -m 755 -g root -d debian/squid3/var/spool
